<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="30dp"
                android:layout_gravity="center_vertical"
                android:layout_height="30dp"
                android:src="@drawable/bball" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center_horizontal"
                android:text="@string/quiz_title"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="@dimen/textSize"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            style="@style/questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Instructions" />

        <TextView
            style="@style/questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/answer_1_qn1"
                    style="@style/answers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kicking_the_ball_CheckBox" />

                <CheckBox
                    android:id="@+id/answer_2_qn1"
                    style="@style/answers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lay_up_checkBox" />

                <CheckBox
                    android:id="@+id/answer_3_qn1"
                    style="@style/answers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/free_throw_checkBox" />

                <CheckBox
                    android:id="@+id/answer_4_qn1"
                    style="@style/answers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/non_of_the_above_checkBox" />


            </LinearLayout>

            <ImageView
                android:id="@+id/img_qn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/passed"
                android:visibility="gone" />


        </LinearLayout>


        <TextView
            style="@style/questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/quesion_2Edt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/answer_hint"
                android:padding="@dimen/padding" />

            <ImageView
                android:id="@+id/img_qn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/passed"
                android:visibility="gone" />

        </LinearLayout>

        <TextView
            style="@style/questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/question_3Edt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/answer_hint"
                android:padding="20dp" />

            <ImageView
                android:id="@+id/img_qn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/passed"
                android:visibility="gone" />

        </LinearLayout>


        <TextView
            style="@style/questions"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/question_4" />


        <LinearLayout
            android:id="@+id/question4_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                style="@style/answers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a_verandah_radio_btn" />

                <RadioButton
                    android:id="@+id/court_answer_qn4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a_court_radio_btn" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a_bed_radio_btn" />

            </RadioGroup>

            <ImageView
                android:id="@+id/img_qn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/passed"
                android:visibility="gone" />

        </LinearLayout>

        <TextView
            style="@style/questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                style="@style/answers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/answer_qn5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/five_radio_btn" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/twelve_radio_btn" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/three_radio_btn" />

            </RadioGroup>

            <ImageView
                android:id="@+id/img_qn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/passed"
                android:visibility="gone" />

        </LinearLayout>


        <Button
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:onClick="submit"
            android:text="@string/submit_btn" />

    </LinearLayout>
</ScrollView>